results/SpecGenBench/0-shot/log-TwoSum-2023_11_29_01_42_24.txt
class TwoSum {
    //@ requires nums != null;
    //@ requires (\forall int i; 0 <= i && i < nums.length; nums[i] != null);
    //@ requires target >= 0;
    //@ ensures \result != null;
    //@ ensures \result.length <= 2;
    //@ ensures (\forall int i; 0 <= i && i < \result.length; 0 <= \result[i] && \result[i] < nums.length);
    public int[] twoSum(int[] nums, int target) {
        int n = nums.length;
        for (int i = 0; i < n; ++i) {
            for (int j = i + 1; j < n; ++j) {
                if (nums[i] + nums[j] == target) {
                    return new int[]{i, j};
                }
            }
        }
        return new int[0];
    }
}
/home/max/Documents/JMLGPT/tmp/TwoSum.java:3: error: bad operand types for binary operator '!='
    //@ requires (\forall int i; 0 <= i && i < nums.length; nums[i] != null);
                                                                    ^
  first type:  int
  second type: <null>
1 error

